# dat-cms

./: .gitignore  BUILD.md  Cargo.toml  Dockerfile  PUBLISH.md  README.md  TEST_DEBUG.md
.cargo/: config.toml
apps/dat-cms/: Cargo.toml
apps/dat-cms/src/: cron.rs  error.rs  lib.rs  main.rs  request_context.rs  router.rs  routes.rs  schema.rs  server.rs
apps/dat-cms/src/router/: cms_router.rs  debug_router.rs
apps/dat-cms/src/routes/: cert.rs  debug.rs
apps/dat-cms/src/services/: cert_service.rs
clients/dat-go/: README.md  bench_ecdsa_test.go  bench_test.go  certificate_test.go  crypto_test.go  go.mod  hard_test.go  manager_example_test.go  manager_test.go  signature_test.go
clients/dat-go/v4/: README.md  crypto.go  dat.go  manager.go  signature.go
clients/dat-maven/: README.md  build.gradle.kts
clients/dat-npm/: .gitignore  README.md
clients/dat-nuget/: PUBLISH.md  README.md
clients/dat-nuget/Saro.Dat/: Saro.Dat.csproj
clients/dat-pypi/: README.md  pyproject.toml
clients/dat-ruby/: .gitignore  README.md
clients/dat-rust/: .editorconfig  Cargo.toml  README.md
crates/dat-cms/: Cargo.toml
crates/dat-cms/src/: cron.rs  entity.rs  env.rs  main.rs  request_context.rs  routes.rs  schema.rs  services.rs
crates/dat-cms/src/dto/: cert.rs
crates/dat-cms/src/entity/: dat_cms_cert.rs
crates/dat-cms/src/routes/: cert.rs  debug.rs
crates/dat-cms/src/services/: cert_service.rs
crates/infra/: Cargo.toml
crates/infra/src/: api.rs  client_ip.rs  codes.rs  database.rs  lib.rs
dat-cms/: Cargo.toml  Dockerfile  TEST_DEBUG.md
dat-cms/.cargo/: config.toml
dat-cms/src/: api.rs  cron.rs  database.rs  env.rs  logging.rs  main.rs  request_context.rs  routes.rs  schema.rs  server.rs
dat-cms/src/entity/: dat_cms_cert.rs
dat-cms/src/routes/: cert.rs  debug.rs
dat-cms/src/services/: cert_service.rs
dat-go/v4/: README.md  certificate_test.go  crypto_test.go  error.go  go.mod  hard_test.go  manager_example_test.go  manager_test.go  signature_test.go
dat-maven/: .gitignore  README.md  build.gradle.kts
dat-npm/: PUBLISH.md  README.md  package-lock.json  package.json
dat-npm/src/: bench.test.ts  crypto.test.ts  crypto.ts  dat.certificate.test.ts  dat.certificate.ts  dat.cms.manager.test.ts  dat.cms.manager.ts  dat.manager.test.ts  dat.manager.ts  dat.ts  example.test.ts  hard.test.ts  index.test.ts  index.ts  signature.test.ts  signature.ts
dat-npm/src/util/: DatArrayBuffer.ts  DatArrayBufferLike.ts  DatBytes.ts  DatInteger.ts  DatUint8Array.ts  util.test.ts
dat-nuget/: README.md
dat-nuget/Saro.Dat/: Dat.cs  DatCertificate.cs  DatCryptoAesGcmNonce.cs  DatManager.cs  DatSignatureHmac.cs  DatUtils.cs
dat-pypi/: .gitignore  PUBLISH.md  README.md  pyproject.toml
dat-pypi/src/saro_dat/: __init__.py  crypto.py  dat.py  dat_certificate.py  dat_cms_manager.py  dat_manager.py  signature.py  util.py
dat-pypi/tests/: test_bench.py  test_certificate.py  test_cms_manager.py  test_crypto.py  test_example.py  test_hard.py  test_manager.py  test_signature.py  test_util.py
dat-ruby/: PUBLISH.md  README.md  saro-dat.gemspec
dat-ruby/lib/: saro-dat.rb
dat-ruby/lib/saro/dat/: crypto.rb  dat.rb  dat_certificate.rb  dat_cms_manager.rb  dat_manager.rb  signature.rb  util.rb
dat-ruby/test/: test_bench.rb  test_certificate.rb  test_cms_manager.rb  test_crypto.rb  test_example.rb  test_hard.rb  test_helper.rb  test_manager.rb  test_manager_example.rb  test_signature.rb  test_util.rb
dat-rust/: Cargo.toml  README.md
dat-rust/src/: certificate.rs  cms_manager.rs  crypto.rs  dat.rs  error.rs  lib.rs  manager.rs  payload.rs  signature.rs  signature_ecdsa.rs  signature_hmac.rs  util.rs
dat-rust/tests/: bench_b64_test.rs  bench_crypto_test.rs  bench_ecdsa_test.rs  bench_test.rs  certificate_test.rs  crypto_test.rs  example_cms_manager_test.rs  hard_test.rs  manager_test.rs  signature_test.rs
dat-vcpkg/: .gitignore  CMakeLists.txt  PUBLISH.md  README.md  vcpkg.json
dat-vcpkg/include/dat/: dat.h  dat_cms.h
dat-vcpkg/src/: dat_certificate.c  dat_certificate_internal.h  dat_cms_manager.c  dat_crypto.c  dat_crypto.h  dat_dat.c  dat_dat.h  dat_manager.c  dat_signature.c  dat_signature.h  dat_util.c  dat_util.h
dat-vcpkg/tests/: bench_b64_test.c  bench_crypto_test.c  bench_ecdsa_test.c  bench_test.c  certificate_test.c  crypto_test.c  example_cms_manager_test.c  hard_test.c  manager_example_test.c  manager_test.c  signature_test.c
dat-web/: README.md  package-lock.json  package.json  tsconfig.json  wrangler.jsonc
dat-web/.github_tmp/: README.md
dat-web/.github_tmp/workflows/: ci.yml  deploy.yml
dat-web/docs/: index.md
dat-web/docs/.vitepress/: config.mts  langPaths.ts
dat-web/docs/.vitepress/locales/: ar.ts  bn.ts  de.ts  en.ts  es.ts  fr.ts  hi.ts  id.ts  index.ts  ja.ts  ko.ts  pt.ts  ru.ts  ur.ts  zh.ts
dat-web/docs/.vitepress/src/: comm.ts  langs.ts  libs.ts
dat-web/docs/.vitepress/theme/: Layout.vue  index.ts  search.data.js  style.css
dat-web/docs/.vitepress/ui/: CodeBox.vue  DatExample.vue  Menu.vue  (+7 more)
dat-web/docs/ar/: index.md  intro.md
dat-web/docs/bn/: index.md  intro.md
dat-web/docs/de/: index.md  intro.md
dat-web/docs/en/: index.md  intro.md
dat-web/docs/es/: index.md  intro.md
dat-web/docs/fr/: index.md  intro.md
dat-web/docs/hi/: index.md  intro.md
dat-web/docs/id/: index.md  intro.md
dat-web/docs/ja/: index.md  intro.md
dat-web/docs/ko/: index.md  intro.md
dat-web/docs/pt/: index.md  intro.md
dat-web/docs/public/: llms.txt  robots.txt
dat-web/docs/ru/: index.md  intro.md
dat-web/docs/ur/: index.md  intro.md
dat-web/docs/zh/: index.md  intro.md
libs/saro-core/: Cargo.toml
libs/saro-core/src/: api_response.rs  error.rs  lib.rs
libs/saro-infra/src/: database.rs  error.rs  lib.rs  logging.rs
src/: api.rs  api_debug.rs  debug.rs  env.rs  main.rs  middleware.rs  service.rs
src/middleware/: axum_router.rs  cron.rs  database.rs  error.rs  logging.rs  session.rs
src/service/: certificates.rs  cms.rs  entity.rs
src/service/entity/: dat_cert.rs  dat_certificates.rs  dat_cms_cert.rs
web/: .gitignore
(+60 files in other folders)
