[workspace]
members = ["apps/*", "libs/*"]
resolver = "2"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[workspace.dependencies]
saro-infra = { path = "libs/saro-infra" }
axum = { version = "0.8.9", features = ["macros", "json"] }
tower-http = { version = "0.7.0", features = ["catch-panic"] }
tokio = { version = "1.52.3", features = ["full"] }
tokio-cron-scheduler = { version = "0.15.1" }
serde = { version = "1.0.228", features = ["derive"] }
tracing = { version = "0.1.44" }
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json", "time"] }
tracing-appender = { version = "0.2.5" }
rand = { version = "0.10.2" }
regex = { version = "1.12.4" }
anyhow = { version = "1.0.103" }
thiserror = { version = "2.0.18" }
openssl = { version = "0.10.81", features = ["vendored"] }
sea-orm = { version = "2.0.0-rc.42", features = ["sqlx-all", "with-ipnetwork", "runtime-tokio-native-tls"] }

dat = { version = "4.3.3" }
