[package]
name = "dat-cms"
version = "4.3.6"
edition = "2024"
publish = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true


[dependencies]
anyhow = { version = "1.0.104" }
axum = { version = "0.8.9", features = ["macros", "json"] }
rand = { version = "0.10.2" }
regex = { version = "1.13.1" }
sea-orm = { version = "2.0.0", features = ["sqlx-all", "with-ipnetwork", "runtime-tokio-rustls"] }
serde = { version = "1.0.229", features = ["derive"] }
serde_json = { version = "1.0.150" }
tokio = { version = "1.52.4", features = ["full"] }
tokio-cron-scheduler = { version = "0.15.1" }
tower-http = { version = "0.7.0", features = ["catch-panic"] }
tracing = { version = "0.1.44" }
tracing-appender = { version = "0.2.5" }
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json", "time"] }

dat = { version = "4.3.6" }
