[package]
name = "dat-cms"
version = "4.3.3"
edition = "2024"

[dependencies]
saro-infra = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
tokio-cron-scheduler = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
sea-orm = { workspace = true }
openssl = { workspace = true }

dat = { workspace = true }
