[package]
name = "dat-cms"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
infra = { workspace = true }

anyhow = { workspace = true }
axum = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-cron-scheduler = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }

dat = { workspace = true }
